--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-	"name": "tentando-de-novo",
+	"name": "Web-beatriz-e-leandro",
 	"private": true,
 	"dependencies": {
 		"modernizr": "~2.8.1",
-		"axios": "^0.18.0",
-		"es6-promise-polyfill": "^1.2.0"
-	},
-	"devDependencies": {
-		"chai": "^4.1.2",
-		"mocha": "^5.0.4"
+		"jquery": "^3.2.1",
+		"bootstrap" : "*",
+		"sticky": "*",
+		"jQuery-One-Page-Nav" : "*",
+		"stellar" : "*",
+		"bootstrap-validator" : "*"
 	}
 }
