--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
-	"name": "Web-beatriz-e-leandro",
-	"private": true,
-	"dependencies": {
-		"modernizr": "~2.8.1",
-		"bootstrap" : "*",
-		"jQuery" : "^3.2.1",
-		"sticky": "*",
-		"jQuery-One-Page-Nav" : "*",
-		"bootstrap-validator" : "*"
-	}
+  "name": "Web-beatriz-e-leandro",
+  "private": true,
+  "dependencies": {
+    "modernizr": "~2.8.1",
+    "bootstrap": "*",
+    "jQuery": "^3.2.1",
+    "sticky": "*",
+    "jQuery-One-Page-Nav": "*",
+    "bootstrap-validator": "*",
+    "Parallax-ImageScroll": "^0.2.3"
+  }
 }
